deployment-test.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: pengsoo-page
      app.kubernetes.io/component: pengsoo-page
      app.kubernetes.io/instance: pengsoo-page
    name: pengsoo-page
  spec:
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: pengsoo-page
    template:
      metadata:
        labels:
          deploymentconfig: pengsoo-page
      spec:
        containers:
        - image: pengsoo-page
          imagePullPolicy: Always
          name: pengsoo-page
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - pengsoo-page
        from:
          kind: ImageStreamTag
          name: pengsoo-page:test
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: pengsoo-page
      app.kubernetes.io/component: pengsoo-page
      app.kubernetes.io/instance: pengsoo-page
    name: pengsoo-page
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: pengsoo-page
      app.kubernetes.io/component: pengsoo-page
      app.kubernetes.io/instance: pengsoo-page
    name: pengsoo-page
  spec:
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: pengsoo-page
      weight: 100
    wildcardPolicy: None
